# Bot-

./: CMakeLists.txt  bot.cpp  default.nix  main.cpp  shell.nix  token.txt
